Closed Bug 114961 Opened 23 years ago Closed 23 years ago

assertion when looking up OS native mime types

Categories

(Core Graveyard :: File Handling, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: mscott, Assigned: law)

Details

Attachments

(1 file, 2 obsolete files)

I'm getting a lot of assertions in todays build whenever we try to look up the content type for a file extension which is defined in the OS (and not in our data source). The problem is coming from: nsExternalHelperAppService::GetMIMEInfoForExtensionFromDS. It calls mOverRideDataSource->GetSource which returns NS_RDF_NO_VALUE. However apparently this does not qualify as an error code. So the subsequent if (NS_SUCCEEDED(rv)) gets executed. So we end up asserting in FillLiteralValueFromTarget because we have a null resource node. we might want to expand the if check to include a null check for contentTypeNodeResource
Attached patch proposed patch (obsolete) — Splinter Review
Attached patch Same as diff -uw (obsolete) — Splinter Review
To law for now; by the time the tree opens I will be able to neither build nor check in, since my computer will be off and I'll be 400 miles from it (till early January).
Assignee: bzbarsky → law
Comment on attachment 61530 [details] [diff] [review] Same as diff -uw sr=mscott but we should probably make sure *aMIMEInfo is initialized to null at the top of the routine too.
Attachment #61530 - Flags: superreview+
Attachment #61528 - Attachment is obsolete: true
Attachment #61530 - Attachment is obsolete: true
Comment on attachment 61532 [details] [diff] [review] Same but set *aMimeInfo to null sr=mscott I'm already running with this patch. If Bill doesn't mind I'm going to check it in today.
Attachment #61532 - Flags: superreview+
I just checked this in so we can stop getting these assertions.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
mscott, did you see this only debug builds, or was it also cropping up in verif builds?
this was debug only. I'll go ahead and mark it verified for ya.
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: