Bug #114961 --> checking in for bzbarsky@mit.edu, add a null ptr check to avoid some unnecessary assertions r/sr=mscott